--- a/Mira.css
+++ b/Mira.css
@@ -11,12 +11,15 @@ div.grid {
     width: 150px;
     border: 1px clear;
     float: right;
-    top: 5px;
+    /*top: 5px;*/
+    z-index: 1;
 }
 
 #navigationbar #widget {
     position: absolute;
+    top: 6%;
     left: -395px;
+    /*left: -10%;*/
     transition: 0.5s;
     padding: 15px;
     width: 400px;
@@ -27,10 +30,11 @@ div.grid {
 
 #navigationbar #widget:hover {
     left: 0;
+    z-index: 2;
 }
 
 #widget {
-    top: 55px;
+    /*top: 90px;*/
     /*background-color: #202020;*/
 }
 
